--- a/templates/administration/flames/registrations.html
+++ b/templates/administration/flames/registrations.html
@@ -1,7 +1,7 @@
 {% extends "administration/base.html" %}
 {% load static %}
 
-{% block title %}FLAMES Registrations | Angaar Administration{% endblock %}
+{% block title %}FLAMES '25 Registrations{% endblock %}
 
 {% block flames_active %}active{% endblock %}
 
