--- a/templates/administration/alumni/alumni_details.html
+++ b/templates/administration/alumni/alumni_details.html
@@ -134,7 +134,9 @@
                                 <div class="col mr-2">
                                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                                         Total Registrations</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gray-800">{{ total_registrations }}</div>
+                                        <span class="h5 mb-0 font-weight-bold text-success">{{ total_completed_registrations }}</span>
+                                        |
+                                        <span class="h5 mb-0 font-weight-bold">{{ total_registrations }}</span>
                                 </div>
                                 <div class="col-auto">
                                     <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
