--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -531,6 +531,19 @@
                             <span class="hide-menu">Collaboration</span>
                         </li>
 
+                        {% if alumni %}
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="{% url 'my_referrals' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-refresh"></i>
+                                </span>
+                                <span class="hide-menu">My Referrals</span>
+
+                            </a>
+                        </li>
+
+                        {% endif %}
+
                         <li class="sidebar-item">
                             <a class="sidebar-link {% block hackathon_active %} {% endblock %}"
                                 href="{% url 'hackathon_dashboard' %}" aria-expanded="false">
@@ -540,6 +553,8 @@
                                 <span class="hide-menu">Hackathon Teams 🚀</span>
                             </a>
                         </li>
+
+                        
 
                         <!-- ============================= EXTRA ==================== -->
                         <li class="nav-small-cap">
