changed icon of referrals on student side

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -535,7 +535,7 @@
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'my_referrals' %}" aria-expanded="false">
                                 <span>
-                                    <i class="ti ti-refresh"></i>
+                                    <i class="ti ti-receipt"></i>
                                 </span>
                                 <span class="hide-menu">My Referrals</span>
 
