--- a/templates/administration/flames/registrations.html
+++ b/templates/administration/flames/registrations.html
@@ -365,9 +365,9 @@
         <div class="card-body d-flex justify-content-between align-items-center">
             <h3 class="heading">FLAMES Registrations</h3>
             <div class="export-buttons float-end">
-                <button class="btn btn-success btn-sm" id="exportExcel">
+                <a class="btn btn-success btn-sm" href="{% url 'export_flames_registrations_to_excel' %}">
                     <i class="fas fa-file-excel me-2"></i>Export Excel
-                </button>
+                </a>
                 <button class="btn btn-danger btn-sm" id="exportPDF">
                     <i class="fas fa-file-pdf me-2"></i>Export PDF
                 </button>
