updated the timeline on student's dashboard

--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -515,41 +515,42 @@ Student -> Home
                     {% else %}
 
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end">Not Available</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">MERN Stack with Gen AI</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                             <span class="timeline-badge border-2 border border-primary flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">1st June, '25!
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end">Not Available</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">Master Java & DSA!</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                             <span class="timeline-badge border-2 border border-success flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-success fw-semibold">5th June, '25!
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end">Not Available</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">Django with AI Agents!</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                             <span class="timeline-badge border-2 border border-danger flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-danger fw-semibold">5th June, '25!
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end">Not Available</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">DA & Industry Tools!</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
-                            <span class="timeline-badge border-2 border border-warning flex-shrink-0 my-8"></span>
+                            <span class="timeline-badge border-2 border border-secondary flex-shrink-0 my-8"></span>
+                            <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-secondary fw-semibold">5th June, '25!
                         </div>
-                    </li>
-
+                    </li>                    
+                   
                     {% endif %}
                 </ul>
             </div>
