--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -50,7 +50,7 @@
         <h2 class="h4">Login to Learn🔥!</h2>
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" placeholder="Username" name="username" required>
+        <input type="text" class="form-control" placeholder="Username or Email" name="username" required>
       </div>
       <div class="mb-2 position-relative">
         <input type="password" class="form-control" placeholder="Password" name="password" required id="password">
