--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -364,8 +364,8 @@ Our Team | Angaar
             <div class="team-card" data-category="founder" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-img-wrapper">
                     <img class="team-img"
-                        src="https://media.licdn.com/dms/image/v2/D5603AQEjjDCNI0SpwQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1702920234862?e=1747267200&v=beta&t=WAky6VqAcOLUxX4mYfD1koIMHcN9VUSZNF--pP8Qlbs"
-                        alt="Divyanshu Khandelwal">
+                        src="{% static 'img/home/dk.png' %}"
+                        alt="DK">
                 </div>
                 <div class="team-card-content">
                     <h3 class="team-name">Divyanshu Khandelwal</h3>
