updated youtube button on footer

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -253,6 +253,9 @@
                             class="fab fa-linkedin twitter-bg"></i></a>
                     <a target="_blank" href="https://www.instagram.com/the_angaar_batch/"><i
                             class="fab fa-instagram google-bg"></i></a>
+                    <a target="_blank" href="https://www.youtube.com/@theangaarbatchbynamansharm2622"><i
+                            class="fab fa-youtube" style="background-color: rgb(255, 49, 49);"></i></a>
+                    
                     <!-- <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
                     <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
                     <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a> -->
