some changes on the navbar css

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -120,7 +120,14 @@
             #navbar-title {
                 font-size: 17px;
             }
+
+            .navbar{
+                margin: 0;
+                border-radius: 0;
+            }
         }
+
+
     </style>
 
 </head>
