--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -121,13 +121,11 @@
                 font-size: 17px;
             }
 
-            .navbar{
+            .navbar {
                 margin: 0;
                 border-radius: 0;
             }
         }
-
-
     </style>
 
 </head>
@@ -262,7 +260,7 @@
                             class="fab fa-instagram google-bg"></i></a>
                     <a target="_blank" href="https://www.youtube.com/@theangaarbatchbynamansharm2622"><i
                             class="fab fa-youtube" style="background-color: rgb(255, 49, 49);"></i></a>
-                    
+
                     <!-- <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
                     <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
                     <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a> -->
@@ -274,6 +272,16 @@
                     <p><a href="{% url 'about' %}">About</a></p>
                     <p><a href="{% url 'our_team' %}">Our Team</a></p>
                     <p><a href="{% url 'articles' %}">Job Articles</a></p>
+
+                    <p>
+
+                        <a href="{% url 'verify_certificate' %}" class="cta-button"
+                            style="background: linear-gradient(135deg, #ff6026, #ff9d45); color: white; padding: 5px 10px; border-radius: 30px; text-decoration: none; font-weight: 600; font-size: 15px; transition: all 0.3s ease;">
+                            Verify My Certificate
+                            <i class="fas fa-arrow-right ms-2"></i>
+
+                        </a>
+                    </p>
                 </div>
                 <div class="custom-footer-section">
                     <h3>Contact</h3>
@@ -304,9 +312,9 @@
             if (event.keyCode == 123) {
                 return false;
             }
-            if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-                return false;
-            }
+            //if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+             //   return false;
+            //}
             if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
                 return false;
             }
